# ami-forge

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
src/: attic.rs  aws.rs  boot_check.rs  boot_test.rs  build.rs  cluster_test.rs  ec2_harness.rs  gcroot.rs  hardening_gate.rs  lib.rs  main.rs  manifest.rs  multi_layer.rs  packer.rs  pipeline.rs  promote.rs  reaper.rs  rotate.rs  ssh.rs  status.rs  test_ami.rs  trigger.rs  ttl.rs  vpn_test.rs  wg.rs
